# DATATHON_Magic_Steps_FIAP

./: Dockerfile  README.md  docker-compose.yml  env_example.txt  mlflow.db  pyproject.toml
app/api/: main.py  security.py
app/config/: database_config.py  log_config.py
app/data/: base_de_dados_pede_2024.xlsx  dados_teste_2024.xlsx
app/front_end/: front_end.py
app/models/: data_previsions_model.py  previsions_model.py  user_model.py
app/notebooks/: exploracao.ipynb
app/schemas/: user_schema.py
app/src/: data_loader.py  pre_processing.py  training.py
app/tests/: test_pre_processing.py
mlruns/1/models/m-03b30f69580f496b8856ad157a74b850/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-0da04ba30b384ff9acd954501bd2742c/artifacts/: MLmodel
mlruns/1/models/m-1181ff14376f4663abff6df1f0176408/artifacts/: MLmodel
mlruns/1/models/m-12c28fb4fdfb4887a8225cf43c5e8e86/artifacts/: MLmodel  conda.yaml  model.pkl  python_env.yaml
mlruns/1/models/m-165e44be472a408fbdca8d7c305dd4bf/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-18e96f2cf5e04bd5b86fd882fc073753/artifacts/: MLmodel
mlruns/1/models/m-27a4d70446914cf1b4422c00ccd30508/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-343e6ee63fc348b4b7dec157af0165fe/artifacts/: MLmodel  model.pkl  registered_model_meta  requirements.txt
mlruns/1/models/m-573f01bc3139469eba7de82a9ef67755/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-6c6a99515da74884ad89972705d0236e/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-6d83fcc0b13a4826973037deddbe6235/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-70a1885f367846f1822d491c124758c8/artifacts/: MLmodel
mlruns/1/models/m-77ea8f06f2414148839e85aec2724a64/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-892880432bb94fd9831c8af3e406cfe6/artifacts/: MLmodel  model.pkl  requirements.txt
mlruns/1/models/m-a2a17662223d4b6aa20ca2a66f5fa536/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-ad635d828e74472b9b798749deb4c586/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-b5e121960a254dbfa35bfb362f7f14c3/artifacts/: MLmodel
mlruns/1/models/m-c3695a941c5849b3865528c4ecb34e17/artifacts/: MLmodel
mlruns/1/models/m-e815f0f5da6f47039d6eaf40e46964bf/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-ed961fd2143a47ac8b2a08b29fd4842c/artifacts/: MLmodel  model.pkl
