[project]
name = "ml-engineering-app-datathon-fiap"
version = "0.1.0"
description = "Projeto de Engenharia de ML para o Datathon FIAP"
authors = [
    {name = "Kevin da Silva Nunes Amaral",email = "kevinsilvaofl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "commitizen (>=4.13.7,<5.0.0)"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
