[project]
name = "ml-engineering-app-datathon-fiap"
version = "0.1.0"
description = "Projeto de Engenharia de ML para o Datathon FIAP"
authors = [
    {name = "Kevin da Silva Nunes Amaral",email = "kevinsilvaofl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "commitizen (>=4.13.7,<5.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.taskipy.tasks]
format = "isort . && black ."

lint = "flake8 . && black --check . && isort --check-only ."